fix: horizontal scroll on click and back button

--- a/1st-gen/packages/menu/src/menu.css
+++ b/1st-gen/packages/menu/src/menu.css
@@ -75,10 +75,16 @@
   }
 }
 
-:host([mobile-transition="forward"]) {
+.mobile-submenu-animation-wrapper {
+  display: contents;
+}
+
+.mobile-submenu-animation-wrapper[mobile-transition="forward"] {
+  display: block;
   animation: mobile-slide-in-right 200ms ease-out;
 }
 
-:host([mobile-transition="back"]) {
+.mobile-submenu-animation-wrapper[mobile-transition="back"] {
+  display: block;
   animation: mobile-slide-in-left 200ms ease-out;
 }
